# WhisperBERT-AD

./: .gitignore  Demo.tsv  LICENSE  README.md  gemini.py  pyproject.toml  requirements.txt  run.py
configs/: ADReSS_AudioClassifier.yaml  ADReSS_AudioOTKEClassifier.yaml  ADReSS_BERTWhisper.yaml  ADReSS_BERTWhisperOTKE.yaml  ADReSS_CrossAttention.yaml  ADReSS_CrossAttentionOTKE.yaml  ADReSS_TextClassifier.yaml  VAS_AudioClassifier.yaml  VAS_AudioOTKEClassifier.yaml  VAS_BERTWhisper.yaml  VAS_BERTWhisperOTKE.yaml  VAS_CrossAttention.yaml  VAS_CrossAttentionOTKE.yaml
src/: config.py  dataloader.py  experiment.py  help.py  loss.py  model.py  otke.py  trainer.py
